Fix UI bugs and implement dark mode v0.0.2
- Fixed Add Account and Add Transaction modal functionality
- Added functional modal components with proper form validation
- Fixed navigation bar icons using @expo/vector-icons
- Implemented complete dark mode theme system
- Added dark mode toggle switch in Settings
- Updated all screens to use theme-aware styling
- Added darkMode translations for all 5 languages
- Fixed TypeScript configuration
- Version bump to 0.0.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ledgerwell",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Personal debt and credit tracking app with multi-currency support",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "author": "SMohammady@outlook.com",
   "license": "MIT",
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
