--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/react": "^19.1.15",
     "@types/react-native": "^0.72.8",
     "axios": "^1.12.2",
-    "expo": "^54.0.10",
+    "expo": "~54.0.11",
     "expo-constants": "~18.0.9",
     "expo-status-bar": "~3.0.8",
     "i18next": "^25.5.2",
