--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ledgerwell",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Personal debt and credit tracking app with multi-currency support",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "update-version": "node scripts/update-version.js"
   },
   "keywords": [
     "expo",
