fix: Restore app icons and splash screen
- Fix empty splash.png file (was 0 bytes)
- Copy logo.png to splash.png as temporary splash screen
- Add iOS bundle identifier and encryption settings to app.json
- Ensure all app icons are properly configured for build

This fixes the missing app icon issue in Android build v0.2.2

--- a/app.json
+++ b/app.json
@@ -16,7 +16,11 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "icon": "./assets/icon.png"
+      "icon": "./assets/icon.png",
+      "bundleIdentifier": "com.sepehrmohammady.ledgerwell",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "package": "com.sepehrmohammady.ledgerwell",
