--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "axios": "^1.12.2",
     "expo": "^54.0.12",
     "expo-constants": "~18.0.9",
+    "expo-file-system": "~19.0.16",
+    "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "i18next": "^25.5.2",
     "react": "^19.1.0",
@@ -39,6 +41,7 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "xlsx": "^0.18.5"
   }
 }
