--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ledgerwell",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Personal debt and credit tracking app with multi-currency support",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "axios": "^1.12.2",
     "expo": "^54.0.12",
     "expo-constants": "~18.0.9",
+    "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.16",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
