--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,6 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Local copilot instructions (keep personal settings private)
+.github/copilot-instructions.md
