feat: add password protection and biometric authentication at startup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ledgerwell",
-  "version": "0.5.5",
+  "version": "0.6.0",
   "description": "Personal debt and credit tracking app with multi-currency support",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -30,8 +30,11 @@
     "axios": "^1.12.2",
     "expo": "^54.0.12",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "^15.0.7",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.16",
+    "expo-local-authentication": "^17.0.7",
+    "expo-secure-store": "^15.0.7",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "i18next": "^25.5.2",
