--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ledgerwell",
-  "version": "0.8.7",
+  "version": "0.9.0",
   "description": "Personal debt and credit tracking app with multi-currency support",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -41,9 +41,11 @@
     "react": "^19.1.0",
     "react-i18next": "^16.0.0",
     "react-native": "^0.81.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
     "typescript": "^5.9.2",
     "xlsx": "^0.18.5"
